Fix alignment of items in charms table

--- a/jujugui/static/gui/src/app/components/profile/_profile.scss
+++ b/jujugui/static/gui/src/app/components/profile/_profile.scss
@@ -27,11 +27,11 @@
     }
 
     &-header-row {
-      padding-bottom: 11px;
+      padding-bottom: 12px;
     }
 
     &-row {
-      padding: 11px 0;
+      padding: 12px 0;
 
       &.basic-table__row--expandable {
         &:hover {
